# firmware_notes

arduino/activity1/: activity1.ino
embedded_rust/embedded_driver/at42qt1070/: Cargo.toml  memory.x
embedded_rust/embedded_driver/at42qt1070/.cargo/: config.toml
embedded_rust/embedded_driver/at42qt1070/examples/: read_id.rs  touch_demo.rs
embedded_rust/embedded_driver/at42qt1070/src/: lib.rs
embedded_rust/re-boot-main/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
embedded_rust/re-boot-main/.cargo/: config.toml
embedded_rust/re-boot-main/ld/esp32c6/: blink.x  test.x
embedded_rust/re-boot-main/src/: image.rs  lib.rs  mmu_cache.rs
embedded_rust/re-boot-main/src/ll/: esp32c6.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/: .gitignore  Cargo.toml  README.md
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/.devcontainer/: devcontainer.json
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/basic-project-template/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/basic-project-template/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/blinky/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/blinky/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/button-controlled-blink/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/button-controlled-blink/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/button-press-counter/: .gitignore  Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/button-press-counter/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-blinky/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-blinky/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-led-cycling/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-led-cycling/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-real-time-timer/: .gitignore  Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-real-time-timer/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-async-mutex/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-async-mutex/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-atomic/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-atomic/src/: main.rs
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-blocking-mutex/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-channel/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-pubsub/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-sync-signal/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-template/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/embassy-uart-echo/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/i2c-real-time-clock/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/i2c-scanner/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/led-fading/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/real-time-timer/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/temperature-sensing/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/timer-based-delay/: Cargo.toml  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/uart-loopback/: Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-no-std-esp32c3dkm1/ser-no-std-esp32c3dkm1/voltmeter/: .gitignore  Cargo.toml  diagram.json  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/: .gitignore  Cargo.toml  README.md
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/.devcontainer/: Dockerfile  devcontainer.json
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/basic-project-template/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/blinky/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/button-press-counter/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/connecting-wifi/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/i2c-real-time-clock/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/led-bar-blink/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/led-fading/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/pulse-duration-monitor/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/real-time-timer/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/scripts/: flash.sh
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/simple-http-client/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/simple-http-server/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/simple-voltmeter/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/synchronizing-system-time/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/temperature-sensing/: Cargo.toml  wokwi.toml
embedded_rust/ser-std-esp32c3dkm1/ser-std-esp32c3dkm1/uart-xor-cipher/: Cargo.toml  wokwi.toml
(+387 files in other folders)
