[package]
name = "at42qt1070"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic driver for the AT42QT1070 touch sensor"
license = "MIT"

[dependencies]
embedded-hal = "0.2.3"
bitfield = "0.13.2"

[dev-dependencies]
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.12"

[dev-dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["stm32l4x2"]
