[workspace]
resolver = "2"
members = [
    "basic-project-template",
    "blinky",
    "button-controlled-blink",
    "button-press-counter",
    "uart-loopback",
    "embassy-blinky",
    "embassy-led-cycling",
    "embassy-real-time-timer",
    "embassy-sync-async-mutex",
    "embassy-sync-atomic",
    "embassy-sync-blocking-mutex",
    "embassy-sync-channel",
    "embassy-sync-pubsub",
    "embassy-sync-signal",
    "embassy-template",
    "embassy-uart-echo",
    "i2c-real-time-clock",
    "i2c-scanner",
    "led-fading",
    "real-time-timer",
    "temperature-sensing",
    "timer-based-delay",
    "voltmeter",
]


[workspace.dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy", "log-04"] }
log = { version = "0.4.20" }
embassy-executor = { version = "0.9.1" }
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"
static_cell = "2.1.0"
critical-section = "1.1.3"
portable-atomic = "1.0.0"
heapless = "0.9.2"
nobcd = "0.2.0"
libm = "0.2.8"
fugit = "0.3.7"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
