[workspace]
resolver = "2"
members = [
    "basic-project-template",
    "blinky",
    "button-press-counter",
    "connecting-wifi",
    "i2c-real-time-clock",
    "led-bar-blink",
    "led-fading",
    "pulse-duration-monitor",
    "real-time-timer",
    "simple-http-client",
    "simple-http-server",
    "simple-voltmeter",
    "synchronizing-system-time",
    "temperature-sensing",
    "uart-xor-cipher",
]

[workspace.dependencies]
log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.51", default-features = false }
embuild = "0.33.0"

[workspace.package]
version = "0.1.0"
authors = [
    "The Embedded Rustacean <166909466+theembeddedrustacean@users.noreply.github.com>",
]
edition = "2021"
rust-version = "1.90"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[workspace.features]
default = ["std", "esp-idf-svc/native"]
experimental = ["esp-idf-svc/experimental"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
