[package]
name = "embassy-sync-async-mutex"
version = "0.1.0"
authors = [
    "The Embedded Rustacean <166909466+theembeddedrustacean@users.noreply.github.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-backtrace = { workspace = true }
esp-println = { workspace = true }
log = { workspace = true }
esp-rtos = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
