[package]
name = "embassy-sync-signal"
version = "0.1.0"
authors = [
    "The Embedded Rustacean <166909466+theembeddedrustacean@users.noreply.github.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-backtrace = { workspace = true }
esp-println = { workspace = true }
log = { workspace = true }
esp-rtos = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }


# [profile.dev]
# # Rust debug is too slow. 
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units = 1        # LLVM can perform better optimizations using a single thread
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# opt-level = 's'
# overflow-checks = false
