[package]
name = "connecting-wifi"
version = "0.1.0"
authors = [
    "The Embedded Rustacean <166909466+theembeddedrustacean@users.noreply.github.com>",
]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[features]
default = ["std", "esp-idf-svc/native"]
experimental = ["esp-idf-svc/experimental"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]

[dependencies]
log = { workspace = true }
esp-idf-svc = { workspace = true }
anyhow = "1.0.89"

[build-dependencies]
embuild = "0.33.0"
