[package]
name = "simple-voltmeter"
version = "0.1.0"
authors = [
    "The Embedded Rustacean <166909466+theembeddedrustacean@users.noreply.github.com>",
]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"

[build-dependencies]
embuild = "0.33"
